// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfoGroup /> SSR should render InfoGroup with complex content 1`] = `"<div id="root"><dl data-blade-component="info-group" class="BaseBox-bmPWx btQMBQ"><div data-blade-component="info-item" class="BaseBox-bmPWx jpCPHU"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx CxwZr"><svg aria-hidden="true" data-blade-component="icon" height="16px" viewBox="0 0 24 24" width="16px" fill="none" class="Svgweb__StyledSvg-vcmjs8-0"><path d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z" clip-rule="evenodd" fill="hsla(211, 22%, 56%, 1)" fill-rule="evenodd" data-blade-component="svg-path"></path><path d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z" fill="hsla(211, 22%, 56%, 1)" data-blade-component="svg-path"></path></svg></div><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Account Holder</p></div><p class="StyledBaseText-dVBfTO cylMOo" data-blade-component="text">Customer information</p></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Saurabh Daware</p></div><p class="StyledBaseText-dVBfTO cylMOo" data-blade-component="text">Name of the account holder</p></div></div></dd></div><div data-blade-component="info-item" class="BaseBox-bmPWx jpCPHU"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx CxwZr"><svg aria-hidden="true" data-blade-component="icon" height="16px" viewBox="0 0 24 24" width="16px" fill="none" class="Svgweb__StyledSvg-vcmjs8-0"><path d="M5.105 10.429a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H5.105Zm6.316 0a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H11.42ZM2 22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-1.143a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1V22Zm15.737-11.571a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1h-1.158Zm-5.273-9.186a1 1 0 0 0-.928 0l-9 4.714A1 1 0 0 0 2 6.843v.49a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-.49a1 1 0 0 0-.536-.886l-9-4.714Z" fill="hsla(211, 22%, 56%, 1)" data-blade-component="svg-path"></path></svg></div><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Payment ID</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><span data-blade-component="code" class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  bOjGJr"><code class="StyledBaseText-dVBfTO jkdHUl" data-blade-component="base-text">pay_MK7DGqwYXEwx9Q</code></span></div></div></div></dd></div><div data-blade-component="info-item" class="BaseBox-bmPWx jpCPHU"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Status</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><div data-blade-component="badge" class="BaseBox-bmPWx ePenKG"><div data-blade-component="base-box" class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 BrVNq iebuin"><div data-blade-component="base-box" class="BaseBox-bmPWx iUxudu"><p class="StyledBaseText-dVBfTO faGgdl" data-blade-component="text">Active</p></div></div></div></div></div></div></dd></div></dl></div>"`;

exports[`<InfoGroup /> SSR should render InfoGroup with complex content 2`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 20px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14.c14.c14.c14.c14 {
  text-align: left;
  height: 20px;
  background-color: hsla(150,100%,32%,0.09);
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Menlo",San Francisco Mono,Courier New,Roboto Mono,monospace;
  font-size: 0.625rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c17.c17.c17.c17.c17 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c11.c11.c11.c11.c11 {
  padding: 0px 4px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

.c15.c15.c15.c15.c15 {
  background-color: hsla(150,100%,32%,0.09);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div
  id="root"
>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
              <path
                d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
            <p
              class="c8"
              data-blade-component="text"
            >
              Customer information
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c10"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
            <p
              class="c8"
              data-blade-component="text"
            >
              Name of the account holder
            </p>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M5.105 10.429a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H5.105Zm6.316 0a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H11.42ZM2 22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-1.143a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1V22Zm15.737-11.571a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1h-1.158Zm-5.273-9.186a1 1 0 0 0-.928 0l-9 4.714A1 1 0 0 0 2 6.843v.49a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-.49a1 1 0 0 0-.536-.886l-9-4.714Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Payment ID
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <span
                class=" c11"
                data-blade-component="code"
              >
                <code
                  class="c12"
                  data-blade-component="base-text"
                >
                  pay_MK7DGqwYXEwx9Q
                </code>
              </span>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Status
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <div
                class="c13"
                data-blade-component="badge"
              >
                <div
                  class="c14 c15"
                  data-blade-component="base-box"
                >
                  <div
                    class="c16"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c17"
                      data-blade-component="text"
                    >
                      Active
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> SSR should render InfoGroup with vertical orientation 1`] = `"<div id="root"><dl data-blade-component="info-group" class="BaseBox-bmPWx jwnAKB"><div data-blade-component="info-item" class="BaseBox-bmPWx pJwXq"><div data-blade-component="base-box" class="BaseBox-bmPWx iEGYrt"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Account Holder</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Saurabh Daware</p></div></div></div></dd></div></div><div data-blade-component="info-item" class="BaseBox-bmPWx pJwXq"><div data-blade-component="base-box" class="BaseBox-bmPWx iEGYrt"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Payment Method</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Credit Card</p></div></div></div></dd></div></div><div data-blade-component="info-item" class="BaseBox-bmPWx pJwXq"><div data-blade-component="base-box" class="BaseBox-bmPWx iEGYrt"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Account Number</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">1234567890</p></div></div></div></dd></div></div><div data-blade-component="info-item" class="BaseBox-bmPWx pJwXq"><div data-blade-component="base-box" class="BaseBox-bmPWx iEGYrt"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Branch</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Koramangala</p></div></div></div></dd></div></div></dl></div>"`;

exports[`<InfoGroup /> SSR should render InfoGroup with vertical orientation 2`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: repeat(min(4,4),1fr);
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div
  id="root"
>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payment Method
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Credit Card
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Account Number
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  1234567890
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Branch
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Koramangala
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> SSR should render basic InfoGroup 1`] = `"<div id="root"><dl data-blade-component="info-group" class="BaseBox-bmPWx btQMBQ"><div data-blade-component="info-item" class="BaseBox-bmPWx jpCPHU"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Account Holder</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Saurabh Daware</p></div></div></div></dd></div><div data-blade-component="info-item" class="BaseBox-bmPWx jpCPHU"><dt data-blade-component="info-item-key" class="BaseBox-bmPWx eWagiE"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO kceUCO" data-blade-component="text">Payment Method</p></div></div></div></dt><dd data-blade-component="info-item-value" class="BaseBox-bmPWx cmCItD"><div data-blade-component="base-box" class="BaseBox-bmPWx jvaeCz"><div data-blade-component="base-box" class="BaseBox-bmPWx bOdZMd"><div data-blade-component="base-box" class="BaseBox-bmPWx kDajVU"><p class="StyledBaseText-dVBfTO ejxwnx" data-blade-component="text">Credit Card</p></div></div></div></dd></div></dl></div>"`;

exports[`<InfoGroup /> SSR should render basic InfoGroup 2`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div
  id="root"
>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;
